--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -117,7 +117,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "import os; print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert Code Here\n",
+    "ontario = pd.read_csv(r\"~/CMSE202/repositories/CMSE202_Git_Started/data/ont.csv\")\n",
+    "\n",
+    "plt.plot(ontario['Lake Ontario annual averages'], ontario['AnnAvg'])\n",
+    "plt.title('Water Level vs. Time')\n",
+    "plt.ylabel('Water Level')\n",
+    "plt.xlabel('Year')\n"
    ]
   },
   {
@@ -276,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.12 (default)",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
